--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@popperjs/core": "^2.5.4",
     "gatsby": "^4.19.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
