add meta info in gatsbyconfig

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@popperjs/core": "^2.5.4",
     "gatsby": "^4.19.1",
+    "gatsby-plugin-manifest": "^4.24.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
